# tokensave

./: .gitignore  .mailmap  BENCHMARK.md  DESIGN-v0.4.0.md  README.md  README.zh.md  SKILL.md  pyproject.toml  setup.py  tokensave.pth
tests/: test_advisor.py  test_analyzer.py  test_cli.py  test_compression.py  test_import.py  test_normalizer.py  test_openai_wrapper.py  test_session_reader.py
tests/fixtures/: sample_session.json
tokensave/: __init__.py  _auto.py  advisor.py  cache.py  cli.py  normalizer.py  pricing.py  proxy.py  session_reader.py
tokensave.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tokensave/analyzer/: __init__.py
tokensave/analyzer/detectors/: __init__.py  context_bloat.py  duplicates.py  heartbeat.py  model_mismatch.py
tokensave/compressors/: rules.py
