[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensave"
version = "0.1.1"
description = "Context optimization for LLM API calls. One import, fewer tokens."
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
authors = [
    {name = "raydatalab"}
]

dependencies = [
    "headroom-ai>=0.30.0",
]

[project.scripts]
tokensave = "tokensave.cli:main"

[tool.setuptools.packages.find]
include = ["tokensave*"]
