[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensave"
version = "0.3.0"
description = "Context optimization for LLM API calls. pip install, bills go down."
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
authors = [
    {name = "raydatalab"}
]

dependencies = [
    "openai",
    "headroom-ai>=0.30.0",
]

[project.scripts]
tokensave = "tokensave.cli:main"

[tool.setuptools.packages.find]
include = ["tokensave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
log_cli_level = "WARNING"
