[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokensave"
version = "0.4.0"
description = "Token waste analyzer for AI agents — find where your money goes and get one-click fix prompts. pip install, bills go down."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    {name = "raydatalab"}
]

dependencies = [
    "openai",
    "headroom-ai>=0.30.0",
]

[project.scripts]
tokensave = "tokensave.cli:main"

[tool.setuptools.packages.find]
include = ["tokensave*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "8.0"
log_cli_level = "WARNING"
